--- a/source/research.html.erb
+++ b/source/research.html.erb
@@ -5,14 +5,14 @@
     <div class="row">
 
         <div class="col-sm" align="right">
-        <a href="/force-move-games-OLD.pdf">
+        <a href="/force-move-games-v1.0.pdf">
         <i class="far fa-file-pdf fa-3x"></i>
         <br>
         </a>
         Jun 2018
         </div>
         <div class="col-sm" align="right">
-        <a href="/force-move-games.pdf">
+        <a href="/ForceMove.pdf">
         <i class="far fa-file-pdf fa-5x"></i>
         <br>
         </a>
