--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -3,7 +3,7 @@
 <section id="about">
 <div class="col-lg-10 mx-auto">
   <div class="container">
-    <div class="row d-flex flex-wrap align-items-center">
+    <div class="row">
       <div class="col">
         <h2 class="section-heading" align="left">State channels</h2>
         <p class="text-faded mb-4">
@@ -15,13 +15,8 @@
         At magmo we use a simple-but-powerful approach to develop new state channel protocols and software that are easy to use and understand.
         </p>
         </div>
-        <div class="col text-center">
-            <img src="/images/abstract_jellyfish.svg" height='250px' class="rounded border border-dark">
-        </div>
-        <div class="w-100 text-center">
-        </div>
         <div class="col">
-        <h2 class="section-heading" align="left">About us</h2>
+         <h2 class="section-heading" align="left">About us</h2>
         <p class="text-faded mb-4" align="left">
         We are a team of researchers working on state channels: the most promising scaling 
         solution for the ethereum blockchain.
@@ -39,10 +34,14 @@
         <p class="text-faded mb-4" align="left"> 
         For more details, checkout our <a href='/research'>research papers</a>, 
         check out the <a href="https://github.com/magmo/force-move-games">code</a> or play one of our <a href="/apps">example games!</a>
+        </div>
+        <div class="w-100 text-center">
+        </div>
+        <div class="col">
+       
         </p>
       </div>
         <div class="col text-center">
-        <img src="/images/tiles.png" height='250px'>
         </div>
     </div>
   </div>
