--- a/source/team2.html.erb
+++ b/source/team2.html.erb
@@ -7,9 +7,9 @@
           <!-- Team Member 1 -->
           <div class="col-xl-2 col-md-6 mb-4">
             <div class="card border-0 shadow">
-              <img src="tom.jpeg" class="card-img-top" alt="...">
+              <img src="/images/tom.jpeg" class="card-img-top" alt="...">
               <div class="card-body text-center">
-                <h5 class="card-title mb-0">Tom Close</h5>
+                <h5 class="card-title mb-0">Tom<br> Close</h5>
                 <div class="card-text text-black-50">Web Developer</div>
               </div>
             </div>
@@ -39,7 +39,7 @@
             <div class="card border-0 shadow">
               <img src="/images/alex.jpeg" class="card-img-top" alt="...">
               <div class="card-body text-center">
-                <h5 class="card-title mb-0">Alex Gap</h5>
+                <h5 class="card-title mb-0">Alex<br> Gap</h5>
                 <div class="card-text text-black-50">Web Developer</div>
               </div>
             </div>
@@ -71,6 +71,7 @@
 
         <!-- /.row -->
     </div>
+    Contact us via firstname@magmo.com!
   </div>
 </section>
 <!-- /.container -->
