--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -66,7 +66,7 @@
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="https://discord.gg/UDQMgVa">Chat</a>
+            <a class="nav-link" href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">Chat</a>
           </li>
           </ul>
         </div>
@@ -97,8 +97,7 @@
             <!--<hr class="light my-4">-->
             <br>
             <p class="text-faded mb-4" align="left">
-              We are a team of researchers working on state channels - the most promising scaling 
-              solution for the ethereum blockchain.
+              We are a team of researchers working on state channels - the scaling solution that enables high frequency state exchanges for the Ethereum blockchain
             </p>
             <p class="text faded mb-4" align="left">
             The technology exists today to allow a whole class of applications to move the majority of their transactions “off chain”. The complexity of understanding and applying state channel techniques is the main barrier to adoption.
@@ -117,8 +116,41 @@
             </p>
 
             <p class="text-faded mb-4" align="left">
-            We have recently launched two games that operate on ForceMove: <a href="https://rps.magmo.com">Rock Paper Scissors</a> and  <a href="https://ttt.magmo.com">Tic Tac Toe</a>. The applications are fully <a href="https://github.com/magmo/apps">open-source</a> and designed to be used as a starting point for developers wanting to integrate state channels into their products.
+            We have built two games that operate on ForceMove: <a href="https://rps.magmo.com">Rock Paper Scissors</a> and  <a href="https://ttt.magmo.com">Tic Tac Toe</a>. The applications are fully <a href="https://github.com/magmo/apps">open-source</a> and designed to be used as a starting point for developers wanting to integrate state channels into their products.
             </p>
+
+            <p class="text-faded mb-4" align="left">
+            We have built two games that operate on ForceMove: <a href="https://rps.magmo.com">Rock Paper Scissors</a> and  <a href="https://ttt.magmo.com">Tic Tac Toe</a>. The applications are fully <a href="https://github.com/magmo/apps">open-source</a> and designed to be used as a starting point for developers wanting to integrate state channels into their products.
+            </p>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-primary" id="projects">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 mx-auto text-center">
+            <h2 class="section-heading" align="right">Current Projects</h2>
+            <p class="text-faded mb-4" align="left">
+              Main contributors to State Channels, an open source project in pursuit of a single standard that enable a fully interoperable ecosystem of State Channel applications
+            </p>
+            <p class="text faded mb-4" align="left">
+            With support from Filecoin Grants, we are developing Nitro protocol in golang for use in the Filecoin ecosystem. This work lays the foundation of utilizing virtual channels in the Retrieval Market. Check out our <a href="https://github.com/filecoin-project/devgrants/issues/348">grant proposal</a>!
+                        </p>
+            <div class="row">
+            <div class="col mr-auto text-center">
+              <a href="https://statechannels.org/">
+              <%= image_tag 'sc-logo.png', height:'100', alt: 'State Channels' %>
+              </a>
+            </div>
+            <div class="col mr-auto text-center">
+              <a href="https://filecoin.io/>
+              <img class="image" src="./images/filecoin-logo.svg", height='100', alt="Filecoin">
+              </a>
+            </div>
+
           </div>
         </div>
       </div>
@@ -158,8 +190,8 @@
             </a>
           </div>
           <div class="col mr-auto text-center">
-          <a href="https://discord.gg/UDQMgVa">
-            <i class="fab fa-discord fa-6x"></i>
+          <a href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">
+            <i class="fab fa-slack fa-6x"></i>
           </a>
         </div>
         </div>
